# padder

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: cd.yml  ci.yml  tests.yml
benches/: bench_main.rs  bench_main_enable_unsafe.rs
benches/benchmarks/: format_pad_center.rs  format_pad_left.rs  format_pad_right.rs  mod.rs  mut_string_pad_center.rs  mut_string_pad_left.rs  mut_string_pad_right.rs  mut_string_truncate_center.rs  mut_string_truncate_left.rs  mut_string_truncate_right.rs  mut_vec_pad_center.rs  mut_vec_pad_left.rs  mut_vec_pad_right.rs  mut_vec_truncate_center.rs  mut_vec_truncate_left.rs  mut_vec_truncate_right.rs  slice_pad_center.rs  slice_pad_left.rs  slice_pad_right.rs  str_pad_center.rs  str_pad_left.rs  str_pad_right.rs  str_pad_to_buffer_center.rs  str_pad_to_buffer_left.rs  str_pad_to_buffer_right.rs  string_pad_center.rs  string_pad_left.rs  string_pad_right.rs  string_pad_to_buffer_center.rs  string_pad_to_buffer_left.rs  string_pad_to_buffer_right.rs  string_truncate_center.rs  string_truncate_left.rs  string_truncate_right.rs  vec_pad_center.rs  vec_pad_left.rs  vec_pad_right.rs  vec_pad_to_buffer_center.rs  vec_pad_to_buffer_left.rs  vec_pad_to_buffer_right.rs  (+3 more)
benches/benchmarks_enable_unsafe/: mod.rs
examples/mut_string_unsafe/: Cargo.toml
examples/mut_string_unsafe/src/: main.rs
examples/mut_vec/: Cargo.toml
examples/mut_vec/src/: main.rs
examples/mut_vec_pad/: Cargo.toml
examples/mut_vec_pad/src/: main.rs
examples/string/: Cargo.toml
examples/string/src/: main.rs
examples/vec/: Cargo.toml
examples/vec/src/: main.rs
src/: alignment.rs  lib.rs  mutable_source.rs  source.rs
