[package]
name = "padder"
version = "2.0.0"
edition = "2024"
description = "Highly efficient data formatting and padding crate for Rust."
authors = [
    "Wilhelm Ågren <wilhelm@firelink.sh>",
]
readme = "README.md"
license = "MIT OR APACHE"
homepage = "https://github.com/firelink-sh/padder"
repository = "https://github.com/firelink-sh/padder"

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

[lib]
name = "padder"
path = "src/lib.rs"
test = true
bench = true
crate-type = [ "lib" ]

[features]
default = []
enable_unsafe = []

[[bench]]
name = "default"
path = "benches/bench_main.rs"
harness = false

[[bench]]
name = "enable_unsafe"
path = "benches/bench_main_enable_unsafe.rs"
harness = false
required-features = [ "enable_unsafe" ]
bench = false

[dev-dependencies]
criterion = "0.6.0"
